rewrite section on subobject classifiers, universes in ∞-categories

--- a/format.sty
+++ b/format.sty
@@ -11,6 +11,7 @@
 \usepackage{marginfix}
 \usepackage{ragged2e}
 \usepackage{setspace}
+\usepackage{mathtools}
 \usepackage{xifthen}
 
 \usepackage{amsmath}
@@ -201,6 +202,10 @@
 \newcommand*{\NN}{\mathbb{N}}
 \newcommand*{\RR}{\mathbb{R}}
 \newcommand*{\II}{\mathbb{I}}
+
+\newcommand*{\Type}{\mathbf{Type}}
+\newcommand*{\Core}{\mathbf{Core}}
+\newcommand*{\Prop}{\mathbf{Prop}}
 
 \newtheorem{theorem}[node]{Theorem}
 
