--- a/index.tex
+++ b/index.tex
@@ -30,6 +30,9 @@
 \subsection{Universes and size issues}
 \input{chapters/introduction/recap/universes.tex}
 
+\subsection{\texorpdfstring{\(\infty\)}{Infinity}-categories and univalence}
+\input{chapters/introduction/recap/object-classifiers.tex}
+
 \chapter{Our friend, the interval}
 \input{chapters/interval.tex}
 
